syntax = "proto3";
package txsvc;
option go_package = "kwil/x/proto/txpb";

import "kwil/common/executable.proto";

message GetExecutablesRequest {
    string database = 1;
    string owner = 2;
}

message GetExecutablesResponse {
    repeated common.Executable executables = 1;
}